# chip8_emulator_c

./: CMakeLists.txt  README.md
include/chip/chip8/: chip8.h
include/chip8/: assembler.h  chip8.h
src/: assembler.c  chip8.c  main.c
test/: Chip8AssemblerTest.cpp  Chip8InterpreterTest.cpp  Chip8Test.cpp
